Change colors in i3 config

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -7,8 +7,16 @@ set $mod Mod1
 font pango:MesloLGS Nerd Font 8
 
 # Border
-default_border none
-default_floating_border none
+default_border pixel
+default_floating_border normal
+smart_borders on
+
+# Colors                border  backgr. text    indicator child_border
+client.focused          #bb9af7 #285577 #ffffff #2e9ef4   #bb9af7
+client.focused_inactive #24283b #5f676a #ffffff #484e50   #24283b
+client.unfocused        #24283b #222222 #888888 #292d2e   #24283b
+client.urgent           #2f343a #900000 #ffffff #900000   #900000
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
