--- a/.config/i3/config
+++ b/.config/i3/config
@@ -27,7 +27,7 @@ client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork --no-unlock-indicator --image=./wallpaper.png --tiling
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork --no-unlock-indicator --image=$HOME/.config/i3/wallpaper.png --tiling
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
