--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,8 @@
 
 # TokyoNight colors for Tmux
 
+set-option -a terminal-features 'alacritty:RGB'
+
 set -g mode-style "fg=#7aa2f7,bg=#3b4261"
 
 set -g message-style "fg=#7aa2f7,bg=#3b4261"
