--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 
 # TokyoNight colors for Tmux
 
-set-option -a terminal-features 'alacritty:RGB'
+set-option -a terminal-features "$TERM:RGB"
 
 set -g mode-style "fg=#7aa2f7,bg=#3b4261"
 
