--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -22,8 +22,9 @@ secondary = #bb9af7
 alert = #ff9e64
 disabled = #737aa2
 
-[bar/mybar]
-monitor = ${env:MONITOR:}
+[bar/mainbar]
+# monitor = ${env:MONITOR:}
+monitor = DP-0
 width = 100%
 height = 24pt
 radius = 6
@@ -56,11 +57,40 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; wm-restack = generic
-; wm-restack = bspwm
 ; wm-restack = i3
-
 ; override-redirect = true
+
+[bar/sidebar]
+monitor = DP-2
+width = 100%
+height = 24pt
+radius = 6
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3pt
+
+border-size = 4pt
+border-color = #00000000
+
+padding-left = 0
+padding-right = 1
+
+module-margin = 1
+
+separator = |
+separator-foreground = ${colors.disabled}
+
+font-0 = MesloLGS Nerd Font:style=Regular;2
+
+modules-left = xworkspaces xwindow
+modules-right = pulseaudio memory cpu date
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+enable-ipc = true
 
 [module/systray]
 type = internal/tray
