Update Alacritty and Zathura font to JetBrainsMono Nerd Font

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -6,7 +6,7 @@ decorations = "Buttonless"
 opacity = 0.8
 
 [font]
-normal = { family = "MesloLGS Nerd Font" }
+normal = { family = "JetBrainsMono Nerd Font" }
 size = 24
 
 [general]
