--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,7 +4,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:MesloLGS Nerd Font 8
+font pango:JetBrainsMono Nerd Font 12
 
 # Border
 default_border pixel
