--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -47,7 +47,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = MesloLGS Nerd Font:style=Regular;2
+font-0 = JetBrainsMono Nerd Font;2
 
 modules-left = xworkspaces xwindow
 modules-right = pulseaudio memory cpu date systray
@@ -82,7 +82,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = MesloLGS Nerd Font:style=Regular;2
+font-0 = JetBrainsMono Nerd Font;2
 
 modules-left = xworkspaces xwindow
 modules-right = pulseaudio memory cpu date
