--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,10 @@
 [user]
 	email = 94577382+lucas-gray@users.noreply.github.com
 	name = Lucas Gray
+	signingkey = ~/.ssh/id_ed25519.pub
 [init]
 	defaultBranch = main
+[commit]
+	gpgsign = true
+[gpg]
+	format = ssh
