Add vi mode to tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,6 +3,7 @@
 # TokyoNight colors for Tmux
 
 set-option -a terminal-features "$TERM:RGB"
+set-window-option -g mode-keys vi
 
 set -g mode-style "fg=#7aa2f7,bg=#3b4261"
 
